--- a/bastet.opam
+++ b/bastet.opam
@@ -13,7 +13,7 @@ depends: [
   "qcheck" {>= "0.13" & < "0.18" & with-test}
   "qcheck-alcotest" {>= "0.13" & < "0.18" & with-test}
   "mdx" {>= "1.6.0" & with-test}
-  "bisect_ppx" {>= "2.1.0"}
+  "bisect_ppx" {dev}
   "odoc" {>= "1.5.0" & with-doc}
   "mustache" {>= "3.1.0" & with-doc}
   "dune" {dev}
@@ -36,7 +36,5 @@ build: [
 ]
 dev-repo: "git+https://github.com/Risto-Stevcev/bastet.git"
 pin-depends: [
-  [ "dune.dev" "git+https://github.com/ocaml/dune.git#7533eb9910d773a3c644a8e82e5bb686a3b4cf00" ]
-  [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#48ff923f2c25136de8ab96678f623f54cdac438c" ]
-  [ "melange.dev" "git+https://github.com/melange-re/melange.git#227b7cb862c4a81f74c19fa051a75005918a18ff" ]
+  [ "bisect_ppx.dev" "git+https://github.com/aantron/bisect_ppx.git#685ac06d5cfc21b355f53f1efafd17f9fc4501c3" ]
 ]
