Update dune to use melange.ppx

--- a/bastet_js/src/dune
+++ b/bastet_js/src/dune
@@ -2,4 +2,5 @@
  (name bastet_js)
  (modes melange)
  (libraries bastet)
- (public_name bastet.js))
+ (public_name bastet.js)
+ (preprocess (pps melange.ppx)))
