fix for latest melange

--- a/bastet_js/src/dune
+++ b/bastet_js/src/dune
@@ -1,6 +1,6 @@
 (library
  (name bastet_js)
  (modes melange)
- (libraries bastet)
+ (libraries bastet melange.belt)
  (public_name bastet.js)
  (preprocess (pps melange.ppx)))
