--- a/bastet/test/dune
+++ b/bastet/test/dune
@@ -1,5 +1,5 @@
 (tests
  (names test_bastet)
- (package bastet)
+ (package tan-bastet)
  (libraries alcotest qcheck qcheck-core qcheck-alcotest fmt bastet)
  (action (run %{test})))
